tags/2013-08-29_cppreference/Archive/f49fc1a842841e6b59d638a6544c1331-7f4bc2c90970fdf19c48ebf8cc2bae3f/output
+ g++ -std=c++11 -O2 -Wall -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:10:27: error: invalid initialization of non-const reference of type ‘std::_Bit_reference&’ from an rvalue of type ‘std::_Bit_iterator::reference {aka std::_Bit_reference}’
     for(auto &a : matrix[0]) {
                           ^
